src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: 'calibri';
  font-weight: 700;
  src: url('/fonts/calibri/calibri-bold.ttf')
}

@font-face {
  font-family: 'calibri';
  font-weight: 400;
  src: url('/fonts/calibri/calibri-regular.ttf')
}

@font-face {
  font-family: 'calibri';
  font-weight: 300;
  src: url('/fonts/calibri/calibri-light.ttf')
}

@font-face {
  font-family: "Franklin_Gothic_Regular";
  font-style: normal;
  font-weight: normal;
  src: local("Franklin Gothic Regular"),
    url("/fonts/fraklin/Franklin-Regular.ttf");
}

html {
  scroll-behavior: smooth;
}

.container {
  max-width: 1337px !important;
}

.font_calibri {
  font-family: 'calibri';
}

.font_franklin {
  font-family: "Franklin_Gothic_Regular";
}

.header-gradient {
  background: linear-gradient(0deg, rgba(38, 160, 217, 0) 0%, rgba(255, 255, 255, 1) 77%);
}

.container {
  max-width: 1460px;
}

.fullscreen-video-container {
  position: relative;
  height: 100vh;
  width: 100vw;
  overflow: hidden;
}

.fullscreen-video-container video {
  position: absolute;
  min-width: 100%;
  min-height: 100%;
  width: auto;
  height: auto;
  object-fit: cover;
  z-index: -100;
  top: 50%;
  left: 50%;
  transform: translateX(-50%) translateY(-50%);
}

.wherehouse-video {
  position: relative;
  height: 400px;
  width: "100%";
  overflow: hidden;
}

.wherehouse-video video {
  position: absolute;
  min-width: 100%;
  min-height: 100%;
  width: auto;
  height: auto;
  object-fit: cover;
  z-index: -100;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0%;
  /* transform: translateX(-50%) translateY(-50%); */
}

.certification-gradient {
  background: linear-gradient(167deg, rgba(46, 54, 143, 1) 0%, rgba(13, 15, 41, 1) 75%);
}

.centermodeRight .slick-list {
  padding: 0 20% 0 0 !important;
}

.blue_gradient {
  background: linear-gradient(180deg, rgba(178, 182, 224, 1) 0%, rgba(23, 31, 124, 1) 75%);
}

.blue_gradient2 {
  background: linear-gradient(150deg, rgba(178, 182, 224, 1) 0%, rgba(23, 31, 124, 1) 100%);
}

.blue_gradient3 {
  background: linear-gradient(-90deg, rgba(178, 182, 224, 1) 0%, rgba(23, 31, 124, 1) 100%);
}

.black_gradient {
  background: linear-gradient(180deg, rgba(17, 17, 17, 1) 0%, rgba(17, 17, 17, 1) 0%, rgba(17, 17, 17, 0.2582282913165266) 100%);
}

.banner-gradient {
  background: linear-gradient(85deg, rgba(46, 54, 143, 1) 11%, rgba(46, 54, 143, 1) 24%, rgba(46, 54, 143, 1) 37%, rgba(46, 54, 143, 0.9585084033613446) 43%, rgba(46, 54, 143, 0.9024859943977591) 48%, rgba(46, 54, 143, 0) 100%);
}

.map::-webkit-scrollbar {
  display: none;
}

.present_day {
  z-index: 1;
  font-family: 'calibri';
}

.present_day h6 {
  font-size: 20px;
  font-weight: 700;
  margin-bottom: 16px;
  margin-top: 16px;
}

.present_day p {
  font-weight: 300;
  margin-bottom: 1.4rem;
}

body {
  background-color: #fff !important;
}



* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: Arial, sans-serif;
  background-color: #f0f0f0;
}

.section {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  margin: 50px 0;
  height: 100vh;
  /* Full viewport height */
  position: relative;
}

.left {
  flex: 0 0 40%;
  /* Set image container width */
}

.right {
  flex: 0 0 55%;
  /* Set content container width */
  overflow: hidden;
}

.image img {
  width: 100%;
  height: auto;
}

.content {
  padding: 20px;
  background-color: white;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  position: relative;
  z-index: 1;
}

h2 {
  font-size: 24px;
  margin-bottom: 20px;
}

p {
  font-size: 16px;
  line-height: 1.6;
}

.right .content {
  max-height: 400px;
  /* Adjust as needed */
  overflow-y: auto;
}

.section:nth-child(3) {
  position: relative;
  z-index: 3;
  /* Initially, section 3 has higher z-index to overlap */
}

.left .image {
  position: relative;
}

.right .content {
  position: relative;
}





.app {
  width: 100%;
  height: 100vh;
  overflow: hidden;
}

.card-container {
  position: relative;
  width: 100%;
  height: 100%;
}

.card {
  position: absolute;
  top: 0;
  left: 50%;
  transform: translateX(-50%);
  width: 80%;
  height: 80vh;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 2rem;
  color: white;
  font-weight: bold;
  border-radius: 20px;
}

@media(max-width: 768px){
  .oc_content h2{
    text-align: center;
    font-size: 25px !important;
    line-height: 35px !important;
  }
  .oc_content p{
    text-align: center !important;
    font-size: 12px !important;
  }
  .oc_content h3{
    font-size: 14px !important;
    text-align: center !important;
  }
  .present_day p{
    text-align: center;
    font-size: 12px;
  }
  .present_day h6{
    text-align: center;
    font-size: 14px;
    margin-top: 0 !important;
  }
  .banner-gradient {
    background: linear-gradient(0deg, rgba(46, 54, 143, 1) 11%, rgba(46, 54, 143, 1) 24%, rgba(46, 54, 143, 1) 37%, rgba(46, 54, 143, 0.9585084033613446) 43%, rgba(46, 54, 143, 0.9024859943977591) 48%, rgba(46, 54, 143, 0) 100%);
  }
}

.tags::-webkit-scrollbar { /* WebKit */
  width: 0;
  height: 0;
  display: none;
}

